Fix visible final mole problem

--- a/src/Board.css
+++ b/src/Board.css
@@ -4,6 +4,8 @@
   flex-direction: column;
   padding: 1em;
   background-image: url(./images/all-green.jpg);
+  width: 100vw;
+  height: 100vh;
 }
 .board {
   box-sizing: border-box;
@@ -50,7 +52,7 @@
 
 @keyframes appear-from-bottom {
   from {
-    transform: translateY(8rem)
+    transform: translateY(12rem)
   }
 
   to {
@@ -64,7 +66,7 @@
   }
 
   to {
-    transform: translateY(8rem)
+    transform: translateY(12rem)
   }
 }
 
